# claude-context-zones

./: .gitignore  README.md  install.sh  package.json  pyproject.toml  zones.example.json
src/claude_context_zones/: __init__.py  detector.py  mcp_server.py
src/claude_context_zones/zones/: career.md  default.md  parallel.md
zones/: development.md  finance.md  research.md
