[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-context-zones"
version = "1.1.0"
description = "Context-aware behavior switching for Claude Code based on filesystem location"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Matthew Scott", email = "matthewdscott7@gmail.com"}
]
keywords = [
    "claude",
    "claude-code",
    "ai",
    "context-aware",
    "llm",
    "developer-tools",
    "productivity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/guitargnarr/claude-context-zones"
Repository = "https://github.com/guitargnarr/claude-context-zones"
Issues = "https://github.com/guitargnarr/claude-context-zones/issues"

[project.scripts]
claude-zones = "claude_context_zones.detector:main"
claude-zones-mcp = "claude_context_zones.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_context_zones = ["zones/*.md", "zones.example.json"]
